--- a/web_server/5-design_a_beautiful_404_page.html
+++ b/web_server/5-design_a_beautiful_404_page.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div class="container">
-    <h3>Elvi$</h3>
+    <h3>Festus$</h3>
     <h1>Oops! Page Not Found</h1>
     <p>Ceci n'est pas une page.</p>
     <a href="https://elvisguy.tech" class="cta-btn">Let's Get Back on Track</a>
