--- a/web_server/5-design_a_beautiful_404_page.html
+++ b/web_server/5-design_a_beautiful_404_page.html
@@ -1,67 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Not Found - 404</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      text-align: center;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Not Found</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
 
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 50px 20px;
-    }
+        .container {
+            max-width: 600px;
+            margin: 100px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-    .logo {
-      width: 100px;
-      height: 100px;
-      margin-bottom: 20px;
-    }
+        h1 {
+            color: #e44d26;
+        }
 
-    h1 {
-      font-size: 48px;
-      color: #333;
-      margin-bottom: 10px;
-    }
+        p {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
 
-    h3 {
-	font-size: 38px;
-        color: #333;
-        margin-bottom: 10px;
-    }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
 
-    p {
-      font-size: 18px;
-      color: #777;
-      margin-bottom: 30px;
-    }
+        a {
+            color: #e44d26;
+            text-decoration: none;
+            font-weight: bold;
+        }
 
-    .cta-btn {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #007bff;
-      color: #fff;
-      font-size: 20px;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-
-    .cta-btn:hover {
-      background-color: #0056b3;
-    }
-  </style>
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h3>Festus$</h3>
-    <h1>Oops! Page Not Found</h1>
-    <p>Ceci n'est pas une page.</p>
-    <a href="https://elvisguy.tech" class="cta-btn">Let's Get Back on Track</a>
-  </div>
+    <div class="container">
+        <img src="error.jpg" alt="404 Not Found">
+        <h1>Ceci n'est pas une page</h1>
+        <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
+        <p>Go back to <a href="/">home page</a>.</p>
+    </div>
 </body>
 </html>
+
